examples/errors/parsing/pat-triple-missing.cn
fun f : (Int * Int * Int) -> Int [pure] = {
  (x, y, ) -> x
}

main : () [impure] = ()
